--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.android.compositioncollector">
+    package="com.noahwc.compositioncollector">
 
     <application
         android:allowBackup="true"
@@ -10,19 +10,16 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".NoteActivity"
+            android:name="com.noahwc.compositioncollector.NoteActivity"
             android:label="@string/app_name"
             android:theme="@style/Theme.AppTheme.NoActionBar.DarkGreen"
-            android:parentActivityName="com.example.android.compositioncollector.MainActivity" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-            </intent-filter>
+            android:parentActivityName="com.noahwc.compositioncollector.MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.android.compositioncollector.MainActivity" />
+                android:value="com.noahwc.compositioncollector.MainActivity" />
         </activity>
         <activity
-            android:name=".MainActivity"
+            android:name="com.noahwc.compositioncollector.MainActivity"
             android:label="@string/app_name"
             android:launchMode="singleTop"
             android:theme="@style/Theme.AppTheme.NoActionBar.DarkGreen">
